force-app/main/default/objects/HP_Community_User__c/HP_Community_User__c.object-meta.xml
<CustomObject>
    <description>Objet qui contiens les credentials des users de la community pour Happe</description>
    <label>HP Community User</label>
    <nameField>
        <label>HP Community User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HP Community Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>