force-app/main/default/objects/HP_Community_User__c/fields/Activation_Count__c.field-meta.xml
<CustomField>
    <fullName>Activation_Count__c</fullName>
    <formula>TODAY() -  Activation_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activation Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>