force-app/main/default/objects/HP_Community_User__c/fields/Avatar__c.field-meta.xml
<CustomField>
    <fullName>Avatar__c</fullName>
    <defaultValue>&apos;https://devhpyza-engie-dgpfr.cs189.force.com/happeportal/s/webruntime/org-asset/54a5067472/resource/0811l000000DXDw&apos;</defaultValue>
    <label>Avatar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>