force-app/main/default/objects/HP_Community_User__c/fields/Community_Login__c.field-meta.xml
<CustomField>
    <fullName>Community_Login__c</fullName>
    <formula>Community_User__r.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Community Login</label>
    <type>Text</type>
</CustomField>