force-app/main/default/objects/HP_Community_User__c/fields/Community_User__c.field-meta.xml
<CustomField>
    <fullName>Community_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Community User</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>contains</operation>
            <value>Community</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>HP_Community_Users</relationshipName>
    <type>Lookup</type>
</CustomField>