force-app/main/default/objects/HP_Community_User__c/fields/Crypted_Password__c.field-meta.xml
<CustomField>
    <fullName>Crypted_Password__c</fullName>
    <label>Crypted Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>