force-app/main/default/objects/HP_Community_User__c/fields/Id_Tiers__c.field-meta.xml
<CustomField>
    <fullName>Id_Tiers__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Id Tiers</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>