force-app/main/default/objects/HP_Community_User__c/fields/Reset_Password_Count__c.field-meta.xml
<CustomField>
    <fullName>Reset_Password_Count__c</fullName>
    <formula>FLOOR( MOD( ( NOW() - ( Reset_Password_Time__c + (1/48) ) ) * 24, 24 ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reset Password Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>