force-app/main/default/objects/HP_Community_User__c/fields/Reset_Password_Key__c.field-meta.xml
<CustomField>
    <fullName>Reset_Password_Key__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Reset Password Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>