force-app/main/default/objects/HP_Community_User__c/fields/Reset_Password_Time__c.field-meta.xml
<CustomField>
    <fullName>Reset_Password_Time__c</fullName>
    <label>Reset Password Time</label>
    <type>DateTime</type>
</CustomField>