force-app/main/default/objects/HP_Community_User__c/fields/Salt__c.field-meta.xml
<CustomField>
    <fullName>Salt__c</fullName>
    <label>Salt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>