force-app/main/default/objects/HP_Community_User__c/fields/Unified_Username__c.field-meta.xml
<CustomField>
    <fullName>Unified_Username__c</fullName>
    <formula>LOWER(Username__c)</formula>
    <label>Unified Username</label>
    <type>Text</type>
</CustomField>